--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paginator",
+  "name": "paginate-number",
   "version": "1.0.0",
   "description": "A small js library to get paginate numbers",
   "main": "index.js",
